# revelation

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Untitled.ipynb  create_dataset.lua
.run/: revelation-server.run.xml
resources/: teams.txt
scripts/: create_dataset.lua  regression.py  script.lua  simple_strategy.py  strategy.py
src/: BoardTile.hpp  CMakeLists.txt  README.md  agent.cpp  agent.hpp  agent.py  card.cpp  card.py  character.cpp  character.hpp  character.py  constants.hpp  constants.py  decision.hpp  deck.cpp  deck.hpp  effect.hpp  game.cpp  game.hpp  game.py  json.cpp  logger.cpp  logger.hpp  logger.py  lua.module.cpp  main.cpp  main.py  main.server.cpp  memory.hpp  my_websocket_server.cpp  network.py  pilot.cpp  pilot.py  player.cpp  player.hpp  player.py  position.hpp  random.hpp  search.cpp  search.hpp  (+12 more)
src/control/: CMakeLists.txt  agent.cpp  agent.hpp  game.cpp  game.hpp  py_agent.cpp  py_agent.hpp  step_agent.cpp  step_agent.hpp  timeout.cpp  timeout.hpp
src/gameplay/: CMakeLists.txt  README.md  character.cpp  character.hpp  decision.hpp  deck.cpp  deck.hpp  player.cpp  player.hpp  state.cpp  state.hpp  step.cpp  step_impl.hpp
src/include/: constants.hpp  memory.hpp  position.hpp  random.hpp  visitor.hpp
src/logging/: CMakeLists.txt  file_logger.cpp  file_logger.hpp  json.cpp  logger.cpp  logger.hpp  network_logger.cpp  network_logger.hpp  print.cpp  step.cpp
src/network/: CMakeLists.txt  README.md  connection_list.cpp  connection_list.hpp  grammar.cpp  grammar.hpp  grammar.json.cpp  http_session.cpp  http_session.hpp  launch_game.cpp  launch_game.hpp  listener.cpp  listener.hpp  net.hpp  network_agent.cpp  network_agent.hpp  room.cpp  room.hpp  semaphore.hpp  server.cpp  server.hpp  server_impl.hpp  spectator.cpp  spectator.hpp
src/search/: CMakeLists.txt  README.md  bestfirstsearch.hpp  depthfirstsearch.cpp  depthfirstsearch.hpp  heuristic.cpp  heuristic.hpp  loggers.cpp  loggers.hpp  search.cpp  search.hpp
src/setup/: CMakeLists.txt  agent_setup.hpp  effect.hpp  grammar.cpp  grammar.hpp  grammar.json.cpp  team.hpp  teams.cpp  unique_character.hpp  units_repository.cpp  units_repository.hpp  www_visitor.cpp  www_visitor.hpp
viewer/: index.html  player.html  steps.js  style.css  styling.js
viewer/scenarios/: example1.json  example2.json  example3.json
